# cc-project-baseline

./: .env.example  Caddyfile  Dockerfile  Dockerfile.dev  PLAN.md  README.md  docker-compose.yml  pyproject.toml
config/: client.toml  security_paths.toml  server.toml
src/mycroft/client/: main.py  settings.py
src/mycroft/client/ui/: commands.py  input.py  renderer.py
src/mycroft/client/ws/: client.py
src/mycroft/server/: auth.py  main.py  settings.py
src/mycroft/server/agents/: architect_auto.py  architect_manual.py  base.py  c4_designer.py  e2e_tester.py  execution_dashboard.py  product_auto.py  product_manual.py  project_setup.py  registry.py  scoper.py  streaming.py  work_planner.py
src/mycroft/server/git/: docs_repo.py  github.py  template.py  worktree.py
src/mycroft/server/linear/: blocker_webhook.py  client.py  models.py  webhook.py
src/mycroft/server/pipeline/: state.py
src/mycroft/shared/: protocol.py
templates/: architecture.md.j2  idea.md.j2  service_spec.md.j2  use_cases.md.j2
templates/worker/: code_writer.md.j2  qa_tester.md.j2  team_lead.md.j2  unit_tester.md.j2
tests/test_client/: test_commands.py
tests/test_protocol/: test_messages.py
tests/test_server/: test_blocker.py  test_connection_manager.py  test_conversation.py  test_execution_dashboard.py  test_execution_state.py  test_github_client.py  test_linear_client.py  test_linear_webhook.py  test_orchestrator.py  test_persistence.py  test_pipeline.py  test_project.py  test_sub_agents.py  test_team_lead.py  test_template.py  test_user_confirm.py  test_worktree.py
(+19 files in other folders)
