[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mycroft"
version = "0.1.0"
description = "AI Product Development Pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "anthropic>=0.42",
    "httpx>=0.27",
    "gitpython>=3.1",
    "tavily-python>=0.5",
    "jinja2>=3.1",
    "claude-agent-sdk>=0.1",
    "tomli>=2.0; python_version < '3.11'",
]
client = [
    "typer>=0.12",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "websockets>=13.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
mycroft = "mycroft.client.main:app"
mycroft-server = "mycroft.server.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mycroft"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
